# normalizing-flows

./: .gitignore  .gitmodules
.github/workflows/: ci.yml
py/: normalizing-flows.ipynb  pyproject.toml
sh/: checkpy.sh
ts/: .stylelintrc  eslint.config.js  linear-transform-widget.css  package.json  page.html  test-webgpu.html
ts/src/: constants.ts  distribution-drawing.ts  flow-visualization.ts  layers-firsttry.ts  layers.ts  linear-layer.ts  linear-transform.ts  logit-editor.ts  logit-layer.ts  logit.ts  loss-curve-widget.ts  loss-history.ts  model.ts  moons-dataset.ts  moons-widget.ts  page-state.ts  page.ts  pipeline.ts  sigmoid-editor.ts  sigmoid-layer.ts  sigmoid.ts  slider.ts  spline-editor.ts  spline-layer.ts  spline.ts  test-model.ts  tf-types.ts  train.ts  training-widget.ts  transformation.ts  web-ui-common
