[project]
name = "normalizing-flows"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings (includes whitespace checks)
    "F",   # pyflakes
]
